fix pill styling on mobile viewports

--- a/src/tailwind-output.css
+++ b/src/tailwind-output.css
@@ -654,9 +654,6 @@ video {
 .gap-4 {
   gap: 1rem;
 }
-.self-center {
-  align-self: center;
-}
 .justify-self-center {
   justify-self: center;
 }
@@ -796,6 +793,9 @@ video {
 .p-2 {
   padding: 0.5rem;
 }
+.p-4 {
+  padding: 1rem;
+}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -850,6 +850,12 @@ video {
 }
 .pt-6 {
   padding-top: 1.5rem;
+}
+.pt-9 {
+  padding-top: 2.25rem;
+}
+.pt-8 {
+  padding-top: 2rem;
 }
 .text-left {
   text-align: left;
@@ -1047,6 +1053,10 @@ video {
 
   .md\:gap-1\.5 {
     gap: 0.375rem;
+  }
+
+  .md\:pt-12 {
+    padding-top: 3rem;
   }
 
   .md\:text-center {
